fix: Use get() method to retrieve IdProvider from options